<resources>
    <string name="app_name" translatable="false">DigiLux</string>
    <string name="app_name_gestures" translatable="false">DigiLux Fingerprint Gestures</string>
    <string name="app_name_accessibility_button" translatable="false">DigiLux Accessibility Button</string>
    <string name="about_app">About App</string>
    <string name="start_trial">Start Trial</string>
    <string name="ad_id" translatable="false">ca-app-pub-1045955192336233~2688100802</string>
    <string name="ad_unit_id" translatable="false">ca-app-pub-1045955192336233/5371116222</string>
    <string name="permission_required">Permission Required</string>
    <string name="enable_do_not_disturb">Enable Do Not Disturb Settings</string>
    <string name="enable_accessibility">Enable Accessibility Settings</string>
    <string name="enable_write_settings">Enable Brightness Settings</string>
    <string name="enable_storage_settings">Enable Storage Settings</string>
    <string name="do_not_disturb_permissions_request">This app needs do not disturb access to change the ringer volume.\n\nGo to settings now?</string>
    <string name="accessibility_permissions_request">This app needs accessibility to listen for fingerprint gestures.\n\nGo to accessibility now?</string>
    <string name="settings_permission_request">This app needs permission to write to settings to save the brightness values.\n\nGo to settings now?</string>
    <string name="wallpaper_permission_request">This app needs permission to read from storage to access wallpaper colors and change them.\n\nGo to settings now?</string>
    <string name="do_not_disturb_permission_granted">Do Not Disturb permission granted</string>
    <string name="accessibility_permission_granted">Accessibility permission granted</string>
    <string name="settings_permission_granted">Settings permission granted</string>
    <string name="storage_permission_granted">Storage permission granted</string>
    <string name="do_not_disturb_permission_denied">Do Not Disturb permission denied</string>
    <string name="accessibility_permission_denied">Accessibility permission denied</string>
    <string name="settings_permission_denied">Settings permission denied</string>
    <string name="storage_permission_denied">Storage permission denied</string>
    <string name="gesture_accessibility_service_summary">Enable this to ease one handed phone brightness control by using fingerprint sensor gestures</string>
    <string name="gesture_accessibility_service_description">This app uses accessibility to listen for fingerprint gestures to aid in one handed usage of your device. Accessibility is used for the following:\n
        \n1. To listen for gestures on the fingerprint sensor.\n
        \n2. To enable the docking the current app for accessible one handed use via Android\'s multi-window feature.\n
        \n3. To determine if the notification shade is showing to keep the 1 – 2 gesture combo to show the notification shade first and quick settings second.\n
        \n4. To check what app is currently showing to decide whether the phone should auto rotate the screen in landscape mode.\n
        \n5. To show the accessibility button in the navbar for access to actions if you would prefer not to use a gesture for it.\n
        \n6. To show and / or expand volume controls when adjusting volume.\n
        \n\nEnabling this does not affect the functionality of any apps depending on the fingerprint sensor; gestures will be temporarily unavailable while fingerprint authentication is requested by any app,
        and will become available again after fingerprint authentication is complete.</string>
    <string name="button_accessibility_service_summary">Shows the accessibility button in the navbar; use only if you use 2 or 3 button navigation, not gesture navigation.</string>
    <string name="button_accessibility_service_description">This app uses this to show the accessibility button in the navbar to allow you more easily perform actions:\n
        \n\nEnabling this does not affect the functionality of any apps depending on the fingerprint sensor; gestures will be temporarily unavailable while fingerprint authentication is requested by any app,
        and will become available again after fingerprint authentication is complete.</string>
    <string name="delta_percent">%1$d%% per swipe</string>
    <string name="delta_percent_premium">%1$d%% per swipe (filter only)</string>
    <string name="adjust_slider_delta">Adjust Brightness Slider Step</string>
    <string name="adjust_slider_position">Adjust Slider Position</string>
    <string name="adjust_pop_up_position">Adjust pop up Position</string>
    <string name="position_percent">%1$d%% to the bottom of the screen</string>
    <string name="adjust_slider_duration">Adjust Slider Pop Up Duration</string>
    <string name="duration_value">%1$.2f seconds</string>
    <string name="discrete_brightness_title">Discrete brightness values</string>
    <string name="discrete_brightness_description">Allows you to set discrete values for brightness changes instead of choosing a fixed interval per swipe</string>
    <string name="discrete_brightness_error">Please enter a value between 1 and 99</string>
    <string name="discrete_brightness_hint">Enter a brightness percentage</string>
    <string name="discrete_brightness_text">%1$d%%</string>
    <string name="audio_stream_media">Media (%1$d levels)</string>
    <string name="audio_stream_ringtone">Ring (%1$d levels)</string>
    <string name="audio_stream_alarm">Alarm (%1$d levels)</string>
    <string name="audio_stream_all">All (variable levels)</string>
    <string name="audio_stream_text">%1$d step(s) of %2$d</string>
    <string name="audio_stream_text_system">Set by Android System</string>
    <string name="audio_stream_default">Most relevant (Android Default)</string>
    <string name="audio_stream_title">Select Audio Stream</string>
    <string name="audio_stream_slider_show">Show audio sliders</string>
    <string name="audio_stream_delta">Adjust Audio Change Step</string>
    <string name="choose_color">Choose Color</string>
    <string name="choose_target">Choose Target</string>
    <string name="edit_slider_appearance">Edit Slider Appearance</string>
    <string name="change_slider_background_color">Change slider background color</string>
    <string name="change_slider_color">Change slider color</string>
    <string name="wallpaper_color">Colors from wallpaper (Works with some Live Wallpapers):</string>
    <string name="slider">Slider</string>
    <string name="slider_background">Slider Background</string>
    <string name="premium_prompt_slider">Adds the immeasurable, earth shattering convenience of choosing your slider color based on the colors in your static wallpaper.</string>
    <string name="adaptive_brightness">Restore adaptive brightness when the screen is turned off and on</string>
    <string name="adjust_adaptive_threshold">Adjust Adaptive Brightness Restoration Threshold</string>
    <string name="adjust_adaptive_threshold_prompt">Please enable the adaptive brightness setting to use this feature</string>
    <string name="adjust_adaptive_threshold_description">Restores adaptive brightness after the screen is turned on if the surroundings are brighter than the set value.
    \n\nThis is especially useful if you have the dimmer enabled at night and want to keep it on in between screen states.</string>
    <string name="unavailable_brightness_sensor">Your device does not appear to have an ambient light sensor</string>
    <string name="adaptive_threshold">%1$d lux\n\n%2$s</string>
    <string name="adaptive_threshold_low">Dark, night sky - Bedside and dinner lights</string>
    <string name="adaptive_threshold_medium">Family living room lights - Overcast day</string>
    <string name="adaptive_threshold_high">Overcast day - Direct sunlight</string>
    <string name="use_logarithmic_scale">Use Android Pie logarithmic brightness scale</string>
    <string name="use_colored_nav">Use colored navigation bar</string>
    <string name="set_locked_content">Lock certain features to allow for donation</string>
    <string name="show_slider">Show the slider when adjusting brightness</string>
    <string name="slider_animate">Animate brightness slider entrance and exit</string>
    <string name="screen_dimmer">Screen Dimmer</string>
    <string name="screen_dimmer_toggle">Enable Screen Dimmer</string>
    <string name="screen_dimmer_value">Screen dimmed %1$.0f%% </string>
    <string name="screen_overlay_grant_permission">Grant overlay permissions</string>
    <string name="premium_prompt_dimmer">Draws a dark overlay to further dim brightness at night. Please note the overlay cannot be dawn over the notification bar / shade due to limitations in Android Oreo.</string>
    <string name="adjust_double_swipe_settings">Adjust Double Swipe Duration</string>
    <string name="double_swipe_delay">%1$d milliseconds</string>
    <string name="premium_prompt_double_swipe">Gives the ability to map double swipes to actions.</string>
    <string name="purchase_options">Purchase Options</string>
    <string name="remove_ads_only">Remove ads only</string>
    <string name="remove_ads_and_go_premium">Remove ads and get premium features</string>
    <string name="ad_free_premium_user">Thanks for going premium!</string>
    <string name="ad_free_no_ad_user">Thanks for your support!</string>
    <string name="go_ad_free_title">Go Ad Free</string>
    <string name="go_premium_confirmation">Purchasing this will grant access to premium features.</string>
    <string name="premium_generosity_title">You\'re already premium…</string>
    <string name="premium_generosity_confirmation">Shut up and take my money!</string>
    <string name="help_support">Help, support and feedback</string>
    <string name="review_app">Leave a review</string>
    <string name="alternate_wallpaper">Day and Night Wallpaper</string>
    <string name="current_wallpaper">Current</string>
    <string name="day_wallpaper">Day</string>
    <string name="night_wallpaper">Night</string>
    <string name="reset">Reset</string>
    <string name="choose_edit_source">Choose Edit Source</string>
    <string name="cancel_wallpaper">Wallpaper pick cancelled</string>
    <string name="error_wallpaper">Sorry, there was an error picking the wallpaper</string>
    <string name="error_wallpaper_google_photos">Google Photos has an issue with images from other apps, please try Snapseed.</string>
    <string name="error_wallpaper_not_created">You haven\'t selected a wallpaper for this yet.</string>
    <string name="choose_edit_source_message">Choose the image to edit in an image editing app.
        \n\nRemember to tap the share icon in the app you pick after editing to share the edited image with DigiLux.
        \n\nSnapseed and Photo Editor by dev.mcgyver work great; others should as well with Google Photos being the only known exception.</string>
    <string name="wallpaper_trigger">Wallpaper Change Time</string>
    <string name="light_time">Light: %1%s</string>
    <string name="dark_time">Dark: %1$s</string>
    <string name="to">to</string>
    <string name="auto_rotate_apps">Apps Allowed to Auto Rotate</string>
    <string name="selective_app_rotation">Enable selective app auto rotation (turn off if scrolling performance degrades)</string>
    <string name="auto_rotate_apps_excluded">Ignored Transient/Overlay Apps</string>
    <string name="auto_rotate_add">Add to %1$s</string>
    <string name="auto_rotate_remove">Remove from %1$s?</string>
    <string name="auto_rotate_prompt">Please enable the auto rotate option.</string>
    <string name="gestures">Gestures</string>
    <string name="brightness">Brightness</string>
    <string name="audio">Audio</string>
    <string name="shortcuts">Shortcuts</string>
    <string name="appearance">Display</string>
</resources>