<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017, 2018, 2019 Adetunji Dahunsi.
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_directions"
        android:enabled="true"
        android:icon="@drawable/ic_open_with_grey_24dp"
        android:title="@string/gestures"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_slider"
        android:enabled="true"
        android:icon="@drawable/ic_brightness_7_24dp"
        android:title="@string/brightness"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_accessibility_popup"
        android:enabled="true"
        android:icon="@drawable/ic_human_24dp"
        android:title="@string/shortcuts"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_audio"
        android:enabled="true"
        android:icon="@drawable/ic_volume_loud_24dp"
        android:title="@string/audio"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_wallpaper"
        android:enabled="true"
        android:icon="@drawable/ic_wallpaper_grey_24dp"
        android:title="@string/appearance"
        app:showAsAction="ifRoom" />
</menu>