<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017, 2018, 2019 Adetunji Dahunsi.
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/coordinator_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:padding="@dimen/single_margin">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/single_margin"
        android:drawablePadding="@dimen/single_margin"
        android:text="@string/audio_stream_title"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <RadioButton
            android:id="@+id/stream_media"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/single_margin"
            android:paddingEnd="@dimen/single_margin"
            android:paddingStart="@dimen/single_margin"
            android:paddingTop="@dimen/single_margin"
            android:text="@string/audio_stream_media"
            android:textColor="@color/toggle_text" />

        <RadioButton
            android:id="@+id/stream_ring"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/single_margin"
            android:paddingEnd="@dimen/single_margin"
            android:paddingStart="@dimen/single_margin"
            android:paddingTop="@dimen/single_margin"
            android:text="@string/audio_stream_ringtone"
            android:textColor="@color/toggle_text" />

        <RadioButton
            android:id="@+id/stream_alarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/single_margin"
            android:paddingEnd="@dimen/single_margin"
            android:paddingStart="@dimen/single_margin"
            android:paddingTop="@dimen/single_margin"
            android:text="@string/audio_stream_alarm"
            android:textColor="@color/toggle_text" />

        <RadioButton
            android:id="@+id/stream_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/single_margin"
            android:paddingEnd="@dimen/single_margin"
            android:paddingStart="@dimen/single_margin"
            android:paddingTop="@dimen/single_margin"
            android:text="@string/audio_stream_all"
            android:textColor="@color/toggle_text" />

        <RadioButton
            android:id="@+id/stream_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/single_margin"
            android:paddingEnd="@dimen/single_margin"
            android:paddingStart="@dimen/single_margin"
            android:paddingTop="@dimen/single_margin"
            android:text="@string/audio_stream_default"
            android:textColor="@color/toggle_text" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>


