<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2017, 2018, 2019 Adetunji Dahunsi.
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/single_margin">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/single_margin"
        android:layout_marginBottom="@dimen/single_margin"
        android:text="@string/screen_dimmer"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/toggle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/single_margin"
        android:layout_marginBottom="@dimen/single_margin"
        android:text="@string/screen_dimmer_toggle"
        android:textColor="@color/toggle_text"
        android:theme="@style/SwitchTintTheme"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/go_to_settings"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/double_and_half_margin"
        android:layout_marginTop="@dimen/single_margin"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/screen_overlay_grant_permission"
        android:textAllCaps="false"
        android:textColor="@color/toggle_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:rippleColor="@color/toggle_text"
        app:strokeColor="@color/toggle_text" />
</androidx.constraintlayout.widget.ConstraintLayout>


