<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017, 2018, 2019 Adetunji Dahunsi.
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/single_margin">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/single_margin"
        android:text="@string/alternate_wallpaper"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/current_wallpaper"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/single_margin"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/current_wallpaper"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="H,9:16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/main_wallpaper"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintWidth_percent="0.3" />

    <ImageView
        android:id="@+id/main_wallpaper"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/single_margin"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/day_wallpaper"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="H,9:16"
        app:layout_constraintLeft_toRightOf="@+id/current_wallpaper"
        app:layout_constraintRight_toLeftOf="@+id/alt_wallpaper"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintWidth_percent="0.3" />

    <ImageView
        android:id="@+id/alt_wallpaper"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/night_wallpaper"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="H,9:16"
        app:layout_constraintLeft_toRightOf="@+id/main_wallpaper"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/main_wallpaper"
        app:layout_constraintWidth_percent="0.3" />

    <ImageView
        android:id="@+id/share_day_wallpaper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_edit_24dp"
        app:layout_constraintRight_toRightOf="@+id/main_wallpaper"
        app:layout_constraintBottom_toBottomOf="@+id/main_wallpaper" />

    <ImageView
        android:id="@+id/share_night_wallpaper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_edit_24dp"
        app:layout_constraintRight_toRightOf="@+id/alt_wallpaper"
        app:layout_constraintBottom_toBottomOf="@+id/alt_wallpaper" />

    <ImageView
        android:id="@+id/pick_day_wallpaper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launch_toggle_grey_24dp"
        app:layout_constraintRight_toRightOf="@+id/main_wallpaper"
        app:layout_constraintTop_toTopOf="@+id/main_wallpaper" />

    <ImageView
        android:id="@+id/pick_night_wallpaper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launch_toggle_grey_24dp"
        app:layout_constraintRight_toRightOf="@+id/alt_wallpaper"
        app:layout_constraintTop_toTopOf="@+id/alt_wallpaper" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/single_margin"
        android:gravity="center"
        android:text="@string/current_wallpaper"
        app:layout_constraintLeft_toLeftOf="@+id/current_wallpaper"
        app:layout_constraintRight_toRightOf="@+id/current_wallpaper"
        app:layout_constraintTop_toBottomOf="@+id/current_wallpaper" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/single_margin"
        android:gravity="center"
        android:text="@string/day_wallpaper"
        app:layout_constraintLeft_toLeftOf="@+id/main_wallpaper"
        app:layout_constraintRight_toRightOf="@+id/main_wallpaper"
        app:layout_constraintTop_toBottomOf="@+id/main_wallpaper" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/single_margin"
        android:gravity="center"
        android:text="@string/night_wallpaper"
        app:layout_constraintLeft_toLeftOf="@+id/alt_wallpaper"
        app:layout_constraintRight_toRightOf="@+id/alt_wallpaper"
        app:layout_constraintTop_toBottomOf="@+id/alt_wallpaper" />
</androidx.constraintlayout.widget.ConstraintLayout>